# mini-rend

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NOTES.md  PROGRESS.md  README.md
scripts/: smoke_build.bat
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp  shader.h  window.cpp  window.h
